Updated protocol